# writing-suite

./: README.md  package-lock.json  package.json
src/: _export.js  app.html  index.html  novel.html  reading.html  screenplay.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
